k3s/environment/traefik/dashboard/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
    - host: www.lucasji.cn
    - http:
        paths:
          - path: /traefik
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
